--- a/src/index.scss
+++ b/src/index.scss
@@ -201,3 +201,17 @@ button{
     }
   }
 }
+
+.overlay{
+  width: 100vw;
+  height: 100%;
+  position: absolute;
+  background: #8DB9DF;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  opacity:0.3;
+  z-index:-99;
+  pointer-events: none;
+  transition: all 0.5s ease;
+ }
