--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-body {
+html, body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -6,7 +6,7 @@ body {
   color: #8DB9DF;
   text-align:left;
   background:#FAFBFC ;
-  
+  overflow-x: hidden !important;
 }
 
 *{
@@ -138,6 +138,8 @@ h1, h2, h3, h4,h5{
 
 .main-frame{
   display: flex;
+  // min-height: 100vh;
+  overflow: hidden;
 }
 
 .main-frame-aside{
