--- a/src/index.scss
+++ b/src/index.scss
@@ -220,3 +220,216 @@ button{
   pointer-events: none;
   transition: all 0.5s ease;
  }
+
+
+.ReactModal__Overlay {
+  z-index: 99;
+  background: rgba(141, 185, 223, 0.8) !important;
+}
+.ReactModal__Content{
+  position: relative;
+}
+
+
+
+ .custommodal{
+   background: #fff;
+   position: relative;
+   z-index: 200;
+   border-radius: 10px;
+   overflow: hidden;
+   .modalheader{
+     background: #E7F0F8;
+     position: relative;
+     padding: 14px 16px;
+     h3{
+       text-align: center;
+       font-size: 18px;
+       color: #375976;
+       margin: 0;
+     }
+     i{
+       position: absolute;
+       right: 14px;
+       top: 50%;
+       transform: translateY(-50%);
+       cursor: pointer;
+     }
+   }
+
+   .content{
+     padding: 20px;
+   }
+ }
+
+ .selectmodal{
+   .content{
+     input{
+      border: 1px solid rgba(141, 185, 223, 0.8);
+      width: 100%;
+      padding: 6px 14px;
+      border-radius: 8px;
+      color: #8DB9DF;
+      box-shadow: none !important;
+      outline: 0;
+     }
+
+     .commonbases{
+       margin-top: 14px;
+       .smallhead{
+         font-size: 15px;
+         font-weight: 600;
+         color: #375976;
+         margin-bottom: 6px;
+       }
+       .types{
+         display: flex;
+         flex-flow: wrap;
+         div{
+          border: 1px solid rgba(141, 185, 223, 0.8);
+          padding: 3px 6px;
+          border-radius: 4px;
+          width: 25%;
+          min-width: 50px;
+          max-width: 80px;
+          margin:0 5px;
+          img{
+            height: 18px;
+            width: auto;
+          }
+         }
+       }
+     }
+
+     .list{
+        margin-top: 24px;
+        max-height: 250px;
+         overflow: scroll;
+       .mrow{
+         display: flex;
+         align-items: center;
+         margin: 6px 0;
+         
+         img{
+           margin-right: 8px;
+         }
+         h5{
+           font-size: 15px;
+           margin: 0;
+           font-weight: 600;
+           margin-bottom: 3px;
+           color: rgba(55, 89, 118, 0.8);
+         }
+         h6{
+          font-size: 12px;
+          margin: 0;
+          font-weight: 500;
+         }
+       }
+     }
+
+     .manage{
+       text-align: center;
+       margin-top: 20px;
+       font-size: 14px;
+       color: rgba(55, 89, 118, 0.8);
+       cursor: pointer;
+     }
+   }
+ }
+
+ .settingsmodal{
+  .switch input {
+    position: absolute;
+    opacity: 0;
+  }
+  label {
+    margin: 0;
+    margin-right: 10px;
+  }
+  
+  .switch {
+    display: inline-block;
+    font-size: 20px; /* 1 */
+    height: 14px;
+    width: 2em;
+    background: #e6eff7;
+    border-radius: 1em;
+    cursor: pointer;
+  }
+  
+  .switch div {
+    height: 1em;
+    width: 1em;
+    border-radius: 1em;
+    background: #8db9df;
+    transition: all 300ms;
+    transform: translateY(-3px);
+  }
+  
+  .switch input:checked + div {
+    transform: translate3d(100%, 0, 0) translateY(-3px);
+  }
+  
+  .toggle {
+    display: flex;
+    align-items: center;
+    span {
+      font-size: 15px;
+      font-weight: 500;
+    }
+  }
+
+  .smallhead{
+    font-size: 15px;
+    font-weight: 600;
+    color: #375976;
+    margin-bottom: 8px;
+  }
+  .swapnliq{
+    margin-top: 20px;
+  }
+  h4{
+    font-size: 14px;
+  }
+  .mrow{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px 0;
+    h4{
+      margin: 0;
+    }
+    &.dead{
+      input{
+        max-width: 50px;
+        border: 1px solid rgba(141, 185, 223, 0.8);
+        padding: 4px 14px;
+        border-radius: 8px;
+        color: #8DB9DF;
+        box-shadow: none !important;
+        outline: 0;
+        font-size: 12px;
+        font-weight: 600;
+      }
+    }
+  }
+  .mrowbtn{
+    display: flex;
+    margin-top: 8px;
+    flex-flow: wrap;
+    button{
+      min-width: unset;
+      padding: 5px 10px;
+      font-size: 13px;
+      opacity: 0.8;
+      margin: 6px  8px 6px 0;
+      &.active{
+        opacity: 1;
+      }
+    }
+  }
+  .global{
+
+  }
+ }
